# QuizSensei

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_key.py  test_out.txt  test_verification.txt  verify_ocr.py
app/: Dockerfile  __init__.py  main.py
app/core/: ai_base.py  config.py  constants.py  llm.py  security.py
app/db/: __init__.py  base.py  base_class.py  redis.py  session.py
app/models/: __init__.py  attempt.py  database_models.py  document.py  question.py  quiz.py  source.py  user.py
app/routers/: auth.py  documents.py  exams.py  export.py
app/routers/student/: assessment.py  exams.py
app/routers/teacher/: documents.py  export.py
app/schemas/: agent_outputs.py  analysis.py  document.py  exam.py  question.py
app/schemas/assessment/: question.py
app/schemas/shared/: agent_outputs.py
app/schemas/student/: assessment.py
app/schemas/teacher/: analysis.py  document.py
app/services/: analysis_service.py  analyzer_service.py  auditor_service.py  document_analyzer_service.py  document_service.py  export_service.py  extraction_service.py  generator_service.py  ocr_service.py  question_service.py
app/services/agents/: auditor_agent.py  grader_agent.py
app/services/analyzers/: base.py  financial_literacy_analyzer.py  rule_based_analyzer.py  (+1 more)
docker/nginx/: nginx-default.conf
frontend/: Dockerfile  README.md  app.js  index.html  nginx.conf  package-lock.json  package.json  style.css
frontend/src/: App.css  App.jsx  api.js  index.css  middleware.ts
scripts/: test_llm.py
(+36 files in other folders)
