[project]
name = "quizsensei"
version = "2.0.0"
description = "QuizSensei – Multi-Agent LLM Platform for Document-Grounded Exam Generation"
requires-python = ">=3.12"
dependencies = [
    # ── Core Framework ────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # ── Settings & Validation ─────────────────────────────────────────────
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",

    # ── File Handling ─────────────────────────────────────────────────────
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",

    # ── LLM Integration ───────────────────────────────────────────────────
    "openai>=1.14.0",
    "httpx>=0.28.0",

    # ── Database ──────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # ── Document Extraction ───────────────────────────────────────────────
    "pypdf>=5.3.0",
    "python-docx>=1.1.2",
    "Pillow>=11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
